v2.1.4/_sources/plugins/assign_device_to_site_module.rst.txt

.. Document meta

:orphan:

.. |antsibull-internal-nbsp| unicode:: 0xA0
    :trim:

.. role:: ansible-attribute-support-label
.. role:: ansible-attribute-support-property
.. role:: ansible-attribute-support-full
.. role:: ansible-attribute-support-partial
.. role:: ansible-attribute-support-none
.. role:: ansible-attribute-support-na
.. role:: ansible-option-type
.. role:: ansible-option-elements
.. role:: ansible-option-required
.. role:: ansible-option-versionadded
.. role:: ansible-option-aliases
.. role:: ansible-option-choices
.. role:: ansible-option-choices-default-mark
.. role:: ansible-option-default-bold
.. role:: ansible-option-configuration
.. role:: ansible-option-returned-bold
.. role:: ansible-option-sample-bold

.. Anchors

.. _ansible_collections.cisco.catalystcenter.assign_device_to_site_module:

.. Anchors: short name for ansible.builtin

.. Anchors: aliases



.. Title

cisco.catalystcenter.assign_device_to_site module -- Resource module for Assign Device To Site
++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

.. Collection note

.. note::
    This module is part of the `cisco.catalystcenter collection <https://galaxy.ansible.com/cisco/catalystcenter>`_ (version 2.1.4).

    To install it, use: :code:`ansible-galaxy collection install cisco.catalystcenter`.
    You need further requirements to be able to use this module,
    see :ref:`Requirements <ansible_collections.cisco.catalystcenter.assign_device_to_site_module_requirements>` for details.

    To use it in a playbook, specify: :code:`cisco.catalystcenter.assign_device_to_site`.

.. version_added

.. rst-class:: ansible-version-added

New in cisco.catalystcenter 6.0.0

.. contents::
   :local:
   :depth: 1

.. Deprecated


Synopsis
--------

.. Description

- This module represents an alias of the module assign\_device\_to\_site\_v1

.. note::
    This module has a corresponding :ref:`action plugin <action_plugins>`.

.. Aliases


.. Requirements

.. _ansible_collections.cisco.catalystcenter.assign_device_to_site_module_requirements:

Requirements
------------
The below requirements are needed on the host that executes this module.

- catalystcentersdk \>= 2.3.7.9
- python \>= 3.5






.. Options

Parameters
----------

.. rst-class:: ansible-option-table

.. list-table::
  :width: 100%
  :widths: auto
  :header-rows: 1

  * - Parameter
    - Comments

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-_api_port"></div>

      .. _ansible_collections.cisco.catalystcenter.assign_device_to_site_module__parameter-_api_port:

      .. rst-class:: ansible-option-title

      **_api_port**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-_api_port" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`integer`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The Cisco CATALYST Center port.


      .. rst-class:: ansible-option-line

      :ansible-option-default-bold:`Default:` :ansible-option-default:`443`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-_debug"></div>

      .. _ansible_collections.cisco.catalystcenter.assign_device_to_site_module__parameter-_debug:

      .. rst-class:: ansible-option-title

      **_debug**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-_debug" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Flag for Cisco CATALYST Center SDK to enable debugging.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry-default:`false` :ansible-option-choices-default-mark:`← (default)`
      - :ansible-option-choices-entry:`true`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-_host"></div>

      .. _ansible_collections.cisco.catalystcenter.assign_device_to_site_module__parameter-_host:

      .. rst-class:: ansible-option-title

      **_host**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-_host" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string` / :ansible-option-required:`required`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The Cisco CATALYST Center hostname.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-_password"></div>

      .. _ansible_collections.cisco.catalystcenter.assign_device_to_site_module__parameter-_password:

      .. rst-class:: ansible-option-title

      **_password**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-_password" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The Cisco CATALYST Center password to authenticate.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-_username"></div>
        <div class="ansibleOptionAnchor" id="parameter-user"></div>

      .. _ansible_collections.cisco.catalystcenter.assign_device_to_site_module__parameter-_username:
      .. _ansible_collections.cisco.catalystcenter.assign_device_to_site_module__parameter-user:

      .. rst-class:: ansible-option-title

      **_username**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-_username" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-aliases:`aliases: user`

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The Cisco CATALYST Center username to authenticate.


      .. rst-class:: ansible-option-line

      :ansible-option-default-bold:`Default:` :ansible-option-default:`"admin"`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-_verify"></div>

      .. _ansible_collections.cisco.catalystcenter.assign_device_to_site_module__parameter-_verify:

      .. rst-class:: ansible-option-title

      **_verify**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-_verify" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Flag to enable or disable SSL certificate verification.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`false`
      - :ansible-option-choices-entry-default:`true` :ansible-option-choices-default-mark:`← (default)`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-_version"></div>

      .. _ansible_collections.cisco.catalystcenter.assign_device_to_site_module__parameter-_version:

      .. rst-class:: ansible-option-title

      **_version**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-_version" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Informs the SDK which version of Cisco CATALYST Center to use.


      .. rst-class:: ansible-option-line

      :ansible-option-default-bold:`Default:` :ansible-option-default:`"2.3.7.6"`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-device"></div>

      .. _ansible_collections.cisco.catalystcenter.assign_device_to_site_module__parameter-device:

      .. rst-class:: ansible-option-title

      **device**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-device" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`list` / :ansible-option-elements:`elements=dictionary`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Assign Device To Site's device.


      .. raw:: html

        </div>
    
  * - .. raw:: html

        <div class="ansible-option-indent"></div><div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-device/ip"></div>

      .. _ansible_collections.cisco.catalystcenter.assign_device_to_site_module__parameter-device/ip:

      .. rst-class:: ansible-option-title

      **ip**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-device/ip" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-indent-desc"></div><div class="ansible-option-cell">

      Device IP. It can be either IPv4 or IPv6. IPV4 e.g., 10.104.240.64. IPV6 e.g., 2001 420 284 2004 4 181 500 183.


      .. raw:: html

        </div>


  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-headers"></div>

      .. _ansible_collections.cisco.catalystcenter.assign_device_to_site_module__parameter-headers:

      .. rst-class:: ansible-option-title

      **headers**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-headers" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`dictionary`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Additional headers.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-siteId"></div>

      .. _ansible_collections.cisco.catalystcenter.assign_device_to_site_module__parameter-siteid:

      .. rst-class:: ansible-option-title

      **siteId**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-siteId" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      SiteId path parameter. Site Id where device(s) needs to be assigned.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-validate_response_schema"></div>

      .. _ansible_collections.cisco.catalystcenter.assign_device_to_site_module__parameter-validate_response_schema:

      .. rst-class:: ansible-option-title

      **validate_response_schema**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-validate_response_schema" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Flag for Cisco CATALYST Center SDK to enable the validation of request bodies against a JSON schema.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`false`
      - :ansible-option-choices-entry-default:`true` :ansible-option-choices-default-mark:`← (default)`


      .. raw:: html

        </div>


.. Attributes


.. Notes

Notes
-----

.. note::
   - SDK Method used are sites.Sites.assign\_devices\_to\_site\_v1,
   - Paths used are post /dna/intent/api/v1/assign-device-to-site/{siteId}/device,
   - It should be noted that this module is an alias of assign\_device\_to\_site\_v1
   - Does not support \ :literal:`check\_mode`\ 
   - The plugin runs on the control node and does not use any ansible connection plugins, but instead the embedded connection manager from Cisco CATALYST SDK
   - The parameters starting with catalystCenter\_ are used by the Cisco CATALYST Python SDK to establish the connection

.. Seealso

See Also
--------

.. seealso::

   `Cisco DNA Center documentation for Sites AssignDevicesToSiteV1 <https://developer.cisco.com/docs/dna-center/#!assign-devices-to-site>`_
       Complete reference of the AssignDevicesToSiteV1 API.

.. Examples

Examples
--------

.. code-block:: yaml+jinja

    
    - name: Create
      cisco.catalystcenter.assign_device_to_site:
        _host: "{{ _host }}"
        _username: "{{ _username }}"
        _password: "{{ _password }}"
        _verify: "{{ _verify }}"
        _api_port: "{{ _api_port }}"
        _version: "{{ _version }}"
        _debug: "{{ _debug }}"
        device:
          - ip: string
        headers: '{{my_headers | from_json}}'
        siteId: string




.. Facts


.. Return values

Return Values
-------------
Common return values are documented :ref:`here <common_return_values>`, the following are the fields unique to this module:

.. rst-class:: ansible-option-table

.. list-table::
  :width: 100%
  :widths: auto
  :header-rows: 1

  * - Key
    - Description

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="return-catalystcenter_response"></div>

      .. _ansible_collections.cisco.catalystcenter.assign_device_to_site_module__return-catalystcenter_response:

      .. rst-class:: ansible-option-title

      **catalystcenter_response**

      .. raw:: html

        <a class="ansibleOptionLink" href="#return-catalystcenter_response" title="Permalink to this return value"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`dictionary`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      A dictionary or list with the response returned by the Cisco DNAC Python SDK


      .. rst-class:: ansible-option-line

      :ansible-option-returned-bold:`Returned:` always

      .. rst-class:: ansible-option-line
      .. rst-class:: ansible-option-sample

      :ansible-option-sample-bold:`Sample:` :ansible-rv-sample-value:`{"executionId": "string", "executionStatusUrl": "string", "message": "string"}`


      .. raw:: html

        </div>



..  Status (Presently only deprecated)


.. Authors

Authors
~~~~~~~

- Rafael Campos (@racampos)



.. Extra links

Collection links
~~~~~~~~~~~~~~~~

.. raw:: html

  <p class="ansible-links">
    <a href="https://github.com/cisco-en-programmability/catalystcenter-ansible/issues" aria-role="button" target="_blank" rel="noopener external">Issue Tracker</a>
    <a href="https://github.com/cisco-en-programmability/catalystcenter-ansible" aria-role="button" target="_blank" rel="noopener external">Repository (Sources)</a>
  </p>

.. Parsing errors

